[package]
name = "cargo-feature"
description = "Allows conveniently modify features of crate"
version = "0.5.0"
authors = ["Riey <creeper844@gmail.com>"]
edition = "2018"
license = "MIT"
homepage = "https://github.com/Riey/cargo-feature"
repository = "https://github.com/Riey/cargo-feature"
documentation = "https://docs.rs/cargo-feature"
readme = "README.md"

[dependencies]
structopt = "0.3.20"
toml_edit = "0.2.0"
ansi_term = "0.12.1"
pad = "0.1.6"
cargo_metadata = "0.12.0"

[dev-dependencies]
assert_cmd = "1.0.1"
predicates = "1.0.5"
