[package]
name = "cargo-feature"
description = "Cargo plugin to manage dependency features"
version = "0.6.0"
authors = ["Riey <creeper844@gmail.com>"]
edition = "2018"
license = "MIT"
homepage = "https://github.com/Riey/cargo-feature"
repository = "https://github.com/Riey/cargo-feature"
documentation = "https://github.com/Riey/cargo-feature#usage"
readme = "README.md"
categories = ["command-line-interface", "development-tools", "development-tools::cargo-plugins"]
keywords = [
    "cargo",
    "cargo-subcommand",
    "cli",
    "feature",
    "crates",
]

[dependencies]
structopt = "0.3.20"
toml_edit = "0.14.3"
ansi_term = "0.12.1"
pad = "0.1.6"
cargo_metadata = "0.14.0"

[dev-dependencies]
assert_cmd = "2.0.1"
predicates = "2.0.2"
