[package]
name = "test-lib-dep"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
test-lib = { path = "../test-lib", optional = true }
test-lib-rename = { path = "../test-lib", package = "test-lib", optional = true }
