[package]
name = "test-ws"
version = "0.1.0"
authors = ["Riey <creeper844@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# issue #7
serde = { version = "1.0.117", optional = true }
# issue #6
show-image = "0.6.4"
# issue #9
web-sys = { version = "0.3.45", features = ["HtmlDivElement"] }
