[package]
name = "test-ws"
version = "0.1.0"
authors = ["Riey <creeper844@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
test-lib = { path = "../test-lib", features = ["bar"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
# issue #9, #11
test-lib-dep = { path = "../test-lib-dep" }
